[package]
name = "rust-substrate-monitor"
authors = ["Yury Bely <teremo4ek@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = "0.23.0"
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros", "time"] }
sp-keyring = "6.0.0"
futures = "0.3.24"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.15"